<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hivernage</string>
    <string name="recherche_client">Recherche Client</string>
    <string name="order_client_by">Trier Client par : </string>
    <string name="fiche_client">"Fiche Client : "</string>
    <string name="infos_perso">Informations client : </string>
    <string name="infos_caravane">"Informations caravane : "</string>
    <string name="fiche_camping">Fiche Camping : </string>
    <string name="details_camping">Details camping : </string>
    
    <string name="adresses">- Adresses : </string>
    <string name="telephone">- Tel : </string>
    <string name="mail">- Mail : </string>
    <string name="observation">- Observations : </string>
    <string name="compte">- Compte : </string>
    
    <string name="immatriculation">- Immatriculation  :</string>
    <string name="gabarit">- Gabarit : </string>
    <string name="hangar">- Hangar : </string>
    <string name="statut">- Statut : </string>
    <string name="camping">- Camping : </string>
    
    <string name="observation_caravane">- Observations : </string>
    
    <string name="liste_caravanes">Liste Caravanes : </string>
    
    <string name="order_by">Trier par : </string>
    
    <string name="rechercher">Rechercher</string>
    
    <string name="debut">Deb : </string>
    
    <string name="end">Fin : </string>
    
    <string name="date">Date : </string>
    
    <string name="empl">"Empl : "</string>
    
    <string name="client">"Client : "</string>
    
    <string name="entree">"Entrée : "</string>
    
    <string name="sortie">"Sortie : "</string>
    
    <string name="ajouter_client">Ajouter un client</string>
    
    <string name="nom">"Nom : "</string>
    
    <string name="prenom">"Prenom : "</string>
    
    <string name="caravane">"Caravane : "</string>
    
    <string name="creer_client">Créer client</string>
    
    <string name="acompte">"- Acompte : "</string>
    
    <string name="fillAll">Remplissez tous les champs ! \n(Les Observations peuvent rester vide)</string>
    <string name="fillRequiredClientField">Remplissez les champs minimum requis ! \n(Nom du client, marque et immatriculation de la caravane)</string>
    
    <string name="confirmNewClient">le client a bien été créé</string>
    
    <string name="confirmNewCamping">le camping a bien été créé</string>
    
    <string name="updateClient">Update Client</string>
    
    <string name="ajouter_camping">Ajouter Camping</string>
    
    <string name="creer_camping">Créer camping</string>
    
    <string name="prix">"- Prix : "</string>
    
    <string name="imp_exp">Configuration</string>
    
    <string name="date_begin">- Date de début :</string>
    
    <string name="date_fin">- Date de fin :</string>
    
    <string name="planifier_vacances">Planifier Vacances</string>
    
    <string name="new_hangar">Nouveau Hangar</string>
    <string name="remove_hangar">Supprimé Hangar</string>
    
    <string name="name_new_hangar">Nom du nouveau Hangar</string>
    <string name="add_new_hangar">Ajouter un nouveau Hangar</string>
    <string name="orag_vac">Organisé vacances</string>
    
    <string name="choose_date_and_time">Choisis la date et l\'heure</string>
    
    <string name="annuler">Annuler</string>
    
    <string name="valider">Valider</string>
    
    <string name="caravane_depose">Caravane livrée</string>
    <string name="caravane_recup">Caravane récupéré</string>
    <string name="deliver_caravane">Amener la caravane au camping</string>
    <string name="take_caravane">Recuperer la caravane du camping</string>
    <string name="marque">Marque :</string>
    <string name="nbtotal">"Nombre de Clients total : "</string>
    <string name="nb_bygabarit">Nombre de Client par Gabarit :</string>
    <string name="g1">- G1 : </string>
    <string name="g2">- G2 : </string>
    <string name="g3">- G3 : </string>
    <string name="g4">- G4 : </string>
    <string name="g5">- G5 : </string>
    <string name="withPrice">avec le prix :</string>
    <string name="contact_1">- Contact 1 :</string>
    <string name="contact2">- Contact 2 :</string>
    
</resources>
