<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiche_camping"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/camping_info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Camping Paradis"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telephone"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/camping_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Numero de tel, adresse, observation (hidden) (on toggle)"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/camping_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Numero de tel, adresse, observation (hidden) (on toggle)"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_camping"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/camping_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Numero de tel, adresse, observation (hidden) (on toggle)"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:weightSum="8" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/liste_caravanes"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/camping_liste_caravanes_inside"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7" >
        </ListView>

    </LinearLayout>

</LinearLayout>
